# HW1-FAST-AQ-Parser-Takasuka

./: Nuevo documento de texto.toml  README.md  example.py  file_format.py  pyproject.toml
.github/workflows/: pytest.yml
seqparser/: parse.py  seq.py
tests/: test_parsers.py  test_transcribe.py
