[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "seqparser"
authors = [{name = "Hannah Takasuka", email = "hannah.takasuka@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "pandas", "sys", "pathlib", "typing", "datetime", "os", "io"
]

[project.urls]
Home = "https://github.com/hanmochturt/HW1-FAST-AQ-Parser-Takasuka"

[scripts]
15test = "pytest"